Vivado Project/PraticewithI2C_Inter.sdk/.metadata/.plugins/org.eclipse.cdt.ui/Test.build.log
18:42:29 **** Auto Build of configuration Debug for project Test ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/main.cc'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Test\include" -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Test_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cc"
../src/main.cc: In function 'int main()':
../src/main.cc:25:23: error: 'imuCallBack' was not declared in this scope
   Imu.setup(intrPin, *imuCallBack, *flagVar);
                       ^~~~~~~~~~~
../src/main.cc:25:37: error: 'flagVar' was not declared in this scope
   Imu.setup(intrPin, *imuCallBack, *flagVar);
                                     ^~~~~~~
make: *** [src/main.o] Error 1

18:42:30 Build Finished (took 856ms)

